--- a/client/css/style.css
+++ b/client/css/style.css
@@ -199,3 +199,11 @@ input{
 	color:#333;
 	padding-right:0.5em;
 }
+
+#help{
+	position:absolute;
+	top:20px;
+	width:120px;
+	left:850px;
+	color:#333;
+}
